Se agregaron los videos de acreditación carrera y acreditación clinica a la pagna de inicio.

--- a/web/templates/carrera/index.html
+++ b/web/templates/carrera/index.html
@@ -12,15 +12,15 @@
             <hr class="divider divider-lg bg-primary">
             <div class="row">
                 <div class="col-md-6 marco-video">
-                    <iframe src="https://www.youtube.com/embed/iQeiUi-U2eM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe src="https://www.youtube.com/embed/zRIHDmUppJg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     <p class="msg">
-                      <span class="fa-quote-left"></span>Recomendaciones odontológicas durante el covid-19<span class="fa-quote-right"></span>
+                      <span class="fa-quote-left"></span>Video de acreditación Carrera de Odontología<span class="fa-quote-right"></span>
                     </p>
                 </div>
                 <div class="col-md-6 marco-video">
-                    <iframe src="https://www.youtube.com/embed/kj1ujARuLyY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe src="https://www.youtube.com/embed/M879tQ6bbx8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     <p class="msg">
-                      <span class="fa-quote-left"></span>Video de acreditación de odontología<span class="fa-quote-right"></span>
+                      <span class="fa-quote-left"></span>Video de acreditación Clínica Odontológica<span class="fa-quote-right"></span>
                     </p>
                 </div>
                 <div class="col-md-12" style="margin-top:20px;">
